--- a/src/index.html
+++ b/src/index.html
@@ -215,5 +215,42 @@
     </form>
     <div class="loader"></div>
 </section>
+<div class="accordion">
+    <div class="accordion-container">
+        <div class="panel"><h1>tab 1</h1></div>
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex impedit necessitatibus
+            omnis
+            perspiciatis ut! Quisquam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores
+            beatae
+            delectus doloribus error fugiat illum iure nemo nesciunt quae quam repellat, repudiandae sint totam vel
+            velit
+            voluptas voluptates voluptatibus!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
+            blanditiis
+            commodi facilis nesciunt
+            perferendis possimus reiciendis saepe sint vel velit! At error facilis molestias reprehenderit.
+        </article>
+        <div class="panel"><h1>tab 2</h1></div>
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad porro, praesentium? Aliquid amet beatae
+            consequatur cumque, dolorem dolores ea exercitationem expedita fuga fugiat id illum ipsam maiores minima nam
+            nobis non numquam perferendis perspiciatis quasi quo quos recusandae repellat, repellendus sapiente tempora
+            veniam voluptatem. Repudiandae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio iure
+            numquam
+            provident, qui quia vel.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid blanditiis commodi
+            facilis nesciunt
+            perferendis possimus reiciendis saepe sint vel velit! At error facilis molestias reprehenderit.
+        </article>
+        <div class="panel"><h1>tab 3</h1></div>
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ea esse eum fugit incidunt iste
+            libero
+            porro! Beatae cum rem similique temporibus vitae voluptas! Animi commodi consequuntur deserunt dolor
+            eligendi
+            id, necessitatibus rem repellendus reprehenderit!Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ad
+            distinctio ea excepturi hic maiores obcaecati omnis quia quibusdam quidem. Accusantium?Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Aliquid blanditiis commodi facilis nesciunt
+            perferendis possimus reiciendis saepe sint vel velit! At error facilis molestias reprehenderit.
+        </article>
+    </div>
+</div>
 </body>
 </html>
