change files workflow

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="./reset.less">
-    <link rel="stylesheet" type="text/css" href="./styles.less">
-    <script async src="./tabs.js"></script>
-    <script async src="./mobileMenu.js"></script>
-    <script defer src="./index.js"></script>
+    <link rel="stylesheet" type="text/css" href="././styles/reset.less">
+    <link rel="stylesheet" type="text/css" href="././styles/styles.less">
+    <script async src="./js/tabs.js"></script>
+    <script async src="./js/mobileMenu.js"></script>
+    <script defer src="./js/index.js"></script>
     <title>Document</title>
 </head>
 <body>
 <header>
     <ul class="header-menu">
-        <li><a href="#"><img src="images/roshe.png"></a></li>
+        <li><a href="#"><img src="./images/roshe.png"></a></li>
         <li><a href="#"><span><input type="search" class="search" placeholder="search"></span><img
                 src="./images/search.png"></a></li>
         <li><a href="#"><span>My Account</span><img src="./images/users.png"></a></li>
