change theme, add gallary

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,8 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="http://www.tokkoro.com/picsup/2808983-low-poly-landscape___landscape-nature-wallpapers.jpg" style="width:100%">
+                <img src="http://www.tokkoro.com/picsup/2808983-low-poly-landscape___landscape-nature-wallpapers.jpg"
+                     style="width:100%">
                 <div class="text">Caption Three</div>
             </div>
 
@@ -99,51 +100,58 @@
             <span class="dot"></span>
         </div>
     </div>
+    <div class="main-parallax">
     <div class="parallax-image-1"></div>
-        <div class="description-1">
+    <div class="description-1">
         <h1>Parallax effect</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum laudantium nam quas. Commodi debitis deleniti magnam velit vero. Aperiam beatae labore magni natus perspiciatis sapiente voluptas? Est, itaque, reiciendis! Atque eligendi iusto libero mollitia optio, possimus quis quos repellat tempore vitae voluptas voluptatum. Eos iure libero pariatur perspiciatis?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum laudantium nam quas. Commodi debitis
+            deleniti magnam velit vero. Aperiam beatae labore magni natus perspiciatis sapiente voluptas? Est, itaque,
+            reiciendis! Atque eligendi iusto libero mollitia optio, possimus quis quos repellat tempore vitae voluptas
+            voluptatum. Eos iure libero pariatur perspiciatis?
         </p>
+    </div>
     </div>
     <div class="parallax-image-2"></div>
     <div class="description-2">
         <h1>Parallax effect</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum laudantium nam quas. Commodi debitis deleniti magnam velit vero. Aperiam beatae labore magni natus perspiciatis sapiente voluptas? Eos iure libero pariatur perspiciatis?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum laudantium nam quas. Commodi debitis
+            deleniti magnam velit vero. Aperiam beatae labore magni natus perspiciatis sapiente voluptas? Eos iure
+            libero pariatur perspiciatis?
         </p>
     </div>
 </section>
 <section>
-<div class="tabs-container">
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-    <ul>
-        <li><a href="#">tab 1 </a></li>
-        <li><a href="#">tab 2 </a></li>
-        <li><a href="#">tab 3 </a></li>
-    </ul>
-    <div class="tab-content">
-        <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur distinctio dolorem eaque eos fuga fugit laboriosam nam perferendis velit. A adipisci architecto asperiores deserunt dignissimos dolore ducimus ea esse eveniet expedita explicabo fugiat id illum laborum, molestias nisi odio perferendis possimus quae quisquam recusandae, similique sint soluta sunt tempore veniam veritatis vero vitae voluptate voluptatem. Adipisci amet beatae esse fugit hic id in laboriosam quidem? Earum et porro quasi similique voluptate. Accusantium culpa cupiditate eum exercitationem magni qui rem reprehenderit sequi soluta, totam! A aliquid eius molestiae odit repudiandae voluptatibus?</span>
-            <img src="https://www.w3schools.com/howto/img_mountains_wide.jpg">
-            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
+    <div class="tabs-container">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+        <ul>
+            <li><a href="#">tab 1 </a></li>
+            <li><a href="#">tab 2 </a></li>
+            <li><a href="#">tab 3 </a></li>
+        </ul>
+        <div class="tab-content">
+            <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur distinctio dolorem eaque eos fuga fugit laboriosam nam perferendis velit. A adipisci architecto asperiores deserunt dignissimos dolore ducimus ea esse eveniet expedita explicabo fugiat id illum laborum, molestias nisi odio perferendis possimus quae quisquam recusandae, similique sint soluta sunt tempore veniam veritatis vero vitae voluptate voluptatem. Adipisci amet beatae esse fugit hic id in laboriosam quidem? Earum et porro quasi similique voluptate. Accusantium culpa cupiditate eum exercitationem magni qui rem reprehenderit sequi soluta, totam! A aliquid eius molestiae odit repudiandae voluptatibus?</span>
+                <img src="https://www.w3schools.com/howto/img_mountains_wide.jpg">
+                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
             necessitatibus non praesentium repellendus voluptatibus? Consectetur cum dignissimos doloribus eos incidunt
             iste, maiores minus odit possimus quasi! Accusantium, aliquid aperiam asperiores cumque enim in maxime,
                 nihil nulla odio perferendis quod!</span>
-        </article>
-        <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
+            </article>
+            <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
             necessitatibus non praesentium repellendus voluptatibus? Consectetur cum dignissimos doloribus eos incidunt
             iste, maiores minus odit possimus quasi! Accusantium, aliquid aperiam asperiores cumque enim in maxime,
             nihil nulla odio perferendis quod!</span>
-            <img src="https://www.w3schools.com/howto/img_nature_wide.jpg"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos facere non optio praesentium, rem temporibus ullam voluptatibus. Aperiam cupiditate et, facilis ipsa, nam numquam odit optio placeat sed temporibus vel velit vero? Accusantium alias at aut delectus earum error itaque iure labore, neque, quod ratione reprehenderit rerum sit soluta, suscipit.</span>
-        </article>
-        <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
+                <img src="https://www.w3schools.com/howto/img_nature_wide.jpg"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos facere non optio praesentium, rem temporibus ullam voluptatibus. Aperiam cupiditate et, facilis ipsa, nam numquam odit optio placeat sed temporibus vel velit vero? Accusantium alias at aut delectus earum error itaque iure labore, neque, quod ratione reprehenderit rerum sit soluta, suscipit.</span>
+            </article>
+            <article><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum eligendi id in laudantium, libero magni
             necessitatibus non praesentium repellendus voluptatibus? Consectetur cum dignissimos doloribus eos incidunt
             iste, maiores minus odit possimus quasi! Accusantium, aliquid aperiam asperiores cumque enim in maxime,
             nihil nulla odio perferendis quod!</span>
-            <img src="https://www.w3schools.com/howto/img_fjords_wide.jpg"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab beatae commodi, dicta, eos exercitationem facilis fuga impedit inventore nesciunt obcaecati quod sequi similique soluta vero voluptas? Accusamus aliquam cupiditate deserunt dolor doloremque facere labore minima molestiae officiis perferendis quis reiciendis similique tempora, vel voluptas. Aliquid assumenda cum natus non quasi. Ad blanditiis consectetur cum eaque fugiat hic impedit itaque mollitia nemo nostrum praesentium rem repellendus reprehenderit repudiandae rerum ut, voluptate voluptatem. Dignissimos ea eos explicabo ipsam laborum mollitia, nemo numquam provident quia sequi, voluptas voluptates.</span>
-        </article>
+                <img src="https://img00.deviantart.net/09de/i/2013/213/3/5/low___poly_sea_by_lowwater-d6g82cj.png"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab beatae commodi, dicta, eos exercitationem facilis fuga impedit inventore nesciunt obcaecati quod sequi similique soluta vero voluptas? Accusamus aliquam cupiditate deserunt dolor doloremque facere labore minima molestiae officiis perferendis quis reiciendis similique tempora, vel voluptas. Aliquid assumenda cum natus non quasi. Ad blanditiis consectetur cum eaque fugiat hic impedit itaque mollitia nemo nostrum praesentium rem repellendus reprehenderit repudiandae rerum ut, voluptate voluptatem. Dignissimos ea eos explicabo ipsam laborum mollitia, nemo numquam provident quia sequi, voluptas voluptates.</span>
+            </article>
+        </div>
     </div>
-</div>
 </section>
 <div class="modal-container">
     <button>Open Modal</button>
@@ -174,7 +182,8 @@
                 <input id="sex-female" type="radio" name="sex" value="female" checked>
             </p>
             <p>
-                <label for="name">Name</label><input id="name" type="text" name="name" placeholder="Name" maxlength="10" required>
+                <label for="name">Name</label><input id="name" type="text" name="name" placeholder="Name" maxlength="10"
+                                                     required>
             </p>
             <p>
                 <label for="surname">Surname</label>
@@ -218,7 +227,8 @@
 <div class="accordion">
     <div class="accordion-container">
         <div class="panel"><h1>tab 1</h1></div>
-        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex impedit necessitatibus
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex
+            impedit necessitatibus
             omnis
             perspiciatis ut! Quisquam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores
             beatae
@@ -230,7 +240,8 @@
             perferendis possimus reiciendis saepe sint vel velit! At error facilis molestias reprehenderit.
         </article>
         <div class="panel"><h1>tab 2</h1></div>
-        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad porro, praesentium? Aliquid amet beatae
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad porro,
+            praesentium? Aliquid amet beatae
             consequatur cumque, dolorem dolores ea exercitationem expedita fuga fugiat id illum ipsam maiores minima nam
             nobis non numquam perferendis perspiciatis quasi quo quos recusandae repellat, repellendus sapiente tempora
             veniam voluptatem. Repudiandae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio iure
@@ -240,7 +251,8 @@
             perferendis possimus reiciendis saepe sint vel velit! At error facilis molestias reprehenderit.
         </article>
         <div class="panel"><h1>tab 3</h1></div>
-        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi ea esse eum fugit incidunt iste
+        <article class="tab-content animated zoomIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+            ea esse eum fugit incidunt iste
             libero
             porro! Beatae cum rem similique temporibus vitae voluptas! Animi commodi consequuntur deserunt dolor
             eligendi
@@ -252,5 +264,75 @@
         </article>
     </div>
 </div>
+<section class="gallery">
+    <div class="gallery-container">
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="http://abduzeedo.com/sites/default/files/styles/home_cover/public/originals/paste_1493878149.png?itok=rrJ4DRMM">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, omnis, sed.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="https://s-media-cache-ak0.pinimg.com/originals/2a/3d/9b/2a3d9b62d603ed6cdcefac24b111daf8.jpg">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, totam.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="https://cdna.artstation.com/p/assets/images/images/001/445/190/medium/tim-d-hoore-low-poly-swamp1080p-logo.jpg">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores praesentium rerum sint?</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCgnMxekzmKDdg_q9IYlNf7ykRQGtri0XI92xvU-ngGodWAchfDQ">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, omnis, sed.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="https://assets.awwwards.com/awards/images/2013/02/low-poly-danny-jones-1.jpg">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, totam.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="overlay"><a href="#">more</a></div>
+            <div class="image">
+                <img src="https://cdn.dribbble.com/users/421880/screenshots/1425287/spacedribbble.jpg">
+            </div>
+            <div class="shot-description">
+                <h3>Description Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, repellat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores praesentium rerum sint?</p>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
